# senderapp

./: CMakeLists.txt  README.md  app.js  database.js  main.cpp  main.js  main.js.fixed  mainwindow.cpp  mainwindow.h  package.json  preload.js  report.md  resources.qrc  subscription_manager.h  telegram_api.cpp  telegram_api.h  todo.md  Инструкция по установке и сборке WhatsApp Sender Desktop.md  План разработки нативного десктопного приложения WhatsApp Sender.md
